--- a/src/main/webapp/estilos.css
+++ b/src/main/webapp/estilos.css
@@ -1,36 +1,92 @@
-@charset "ISO-8859-1";
+@charset "UTF-8";
 
-.tabla{
-	width: 80%;
-	height: 80%;
-	border-spacing: 0;
-	
+.cabezera{
+	background-color: lightblue;
+	padding: 20px;
+	text-align: center;
+	text-shadow: 3px 1px 0px black;
 }
-th,td,table {
-	border: solid 1px;
-	
+nav{
+	background-color: aqua;
+	display: flex;
+	padding: 5px;
 }
 
- tabla-container {
-            width: 80%; 
-        }
- th {
-	 background-color: grey;
-	 width: 10%;
-	 
- }
- 
- .azul{
-	 background-color: aqua;
- }
- 
- button{
-	 background-color: orange;
-	 padding: 10px;
-	 display: inline-block;
-    margin: 8px 20%;
-	border-radius: 5px;
-	cursor: pointer;
-    width: 150px;
- }
- 
+main{
+	padding: 2rem;
+}
+
+aside{
+	width: 5%;
+	float: right;
+	border: solid black;
+	overflow: hidden;
+}
+
+article:not(.noticiasNavideñas){
+	width: 30%;
+	height: 8rem;
+	float: right;
+	overflow: auto;
+	border:solid black;
+}
+aside+article{
+	margin-right:7%;
+	}
+	
+article+article{
+	margin-right: 25%;
+}
+
+footer{
+	clear: both;
+	margin-top:8rem;
+	background: grey;
+	padding: 1rem;
+	text-align: center;
+}
+a+a{
+	margin-right: 32%;
+}
+a{
+	display: block;
+	background-color: orange;
+	width:32%;
+	border: solid 1px orange;
+	border-radius: 10%;
+	text-align: center;
+	text-decoration: none;
+	color:black;
+}
+
+input:focus{
+	background-color: red;
+}
+input:hover {
+    background-color: yellow;
+}
+
+.imagenNoticia{
+	width: 24%;
+}
+.textoNoticia{
+	width: 60%;
+	float: right;
+}
+.textoNoticia2{
+	width: 60%;
+	float: left;
+}
+
+
+.imagenNoticia2{
+	width: 30%;
+	float: right;
+}
+
+audio{
+	margin-top: 5%;
+	margin-bottom: 5%;
+	border: solid black;
+	float: right;
+}
